--- a/API/API/src/main/resources/application.properties
+++ b/API/API/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=API
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=senai123
