API produto em desenvolvimento

--- a/API/API/src/main/resources/application.properties
+++ b/API/API/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 spring.application.name=API
 
+# Configuracoes do Banco de Dados
+# ctrl barra atalho
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=senai123
+
+# Schema Padrao
+spring.jpa.properties.hibernate.default_schema=ecommerce
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=validate
+
+# Caso vc esteja em casa ou situacao parecida
+# spring.jpa.hibernate.ddl-auto=create
+
+# SELECT * from ecommerce.cliente
+spring.jpa.show-sql=true
+
+# Para formatar e deixar mais bonito
+spring.jpa.properties.hibernate.format_sql=true
